fix gradient disappear effect on firefox

--- a/app/assets/stylesheets/sumofus/components/header.scss
+++ b/app/assets/stylesheets/sumofus/components/header.scss
@@ -17,14 +17,14 @@
     // when the element is not --at-top, the gradient is moved up and out of the way
     // and a background color is applied.
     background-color: rgba(0,0,0,0.35);
-    background-position-y: -80px;
+    background-position: 0 -80px;
     background-repeat: no-repeat;
     @include transition(background-color 0.40s ease-in-out, background-position 0.20s ease-out);
     @include background-image(linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0)));
 
     &.checks-top--at-top {
       background-color: rgba(0,0,0,0);
-      background-position-y: 0;
+      background-position: 0 0;
     }
   }
 
